--- a/infoversity/src/styles/css/main.css
+++ b/infoversity/src/styles/css/main.css
@@ -64,12 +64,74 @@
 	position: relative;
 	overflow: hidden;
 }
+.dropdown-upper {
+	padding-top: 90px;
+	padding-bottom: 90px;
+}
+.recommendation {
+	cursor: pointer;
+	background-color: white;
+    position: relative !important;
+    z-index: 50;
+    padding: 5px 0px 5px 10px;
+    text-align: left;
+}
+.recommendation:hover {
+	cursor: pointer;
+	background-color: rgb(118, 244, 248);
+    position: relative !important;
+    z-index: 50;
+    padding: 5px 0px 5px 10px;
+    text-align: left;
+}
+.box-rec {
+	height: 320px;
+	overflow-y: scroll;
+	background-color: white;
+	-webkit-box-shadow: 0px 0px 10px 0px rgba(189,189,189,1);
+	-moz-box-shadow: 0px 0px 10px 0px rgba(189,189,189,1);
+	box-shadow: 0px 0px 10px 0px rgba(189,189,189,1);
+	border-radius: 5px;
+}
+.undisplay-recommencation {
+	display: none !important;
+}
 .service-style {
 	position: relative;
 	z-index: 150;
 	background-color: #ebecf1;
 	margin-top: -65px !important;
 	padding-top: 30px;
+}
+.service-style-search {
+	position: relative;
+    z-index: 150;
+    background-color: #ebecf1;
+    margin-top: 0px !important;
+    padding-top: 150px;
+}
+.side-style-mini {
+    transform: rotate(30deg);
+    position: relative;
+    z-index: 125;
+    margin-right: -20px;
+    background-color: #fa1616;
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    margin-top: 0;
+    font-size: 12px;
+}
+.service-style-search-univ {
+	position: relative;
+    z-index: 150;
+    background-color: #ebecf1;
+    margin-top: 90px !important;
+	height: 500px;
+	overflow-y: scroll;
+}
+.display-style {
+	display: none;
 }
 .button-contact-us {
 	cursor: pointer;
@@ -419,6 +481,39 @@
 }
 
 @media screen and (max-width: 960px) {
+	.dropdown-upper {
+		padding-top: 90px;
+		padding-bottom: 0px;
+	}
+	.service-style-search-univ {
+		position: relative;
+		z-index: 150;
+		background-color: #ebecf1;
+		margin-top: 20px !important;
+		height: 500px;
+		overflow-y: scroll;
+	}
+	.pb-15 {
+		padding-bottom: 10px;
+	}
+	.service-style-search {
+		position: relative;
+		z-index: 150;
+		background-color: #ebecf1;
+		margin-top: 0px !important;
+		padding-top: 125px;
+	}
+	.main-menu {
+		text-align: left;
+    	padding: 15px 13px !important;
+	}
+	.box-rec {
+		height: 200px;
+		overflow-y: scroll;
+		background-color: white;
+		box-shadow: 0px 0px 10px 0px rgba(189,189,189,1);
+		border-radius: 5px;
+	}
 	.brand-name {
 		font-size: 24px;
 		padding: 10px 15px;
